texi2html/test/invalid/res/texi_bad_tab_nesting/bad_tab_nesting.texi
\input texinfo @c -*-texinfo-*-

@setfilename bad_tab_nesting.info

@node Top
@top Test for bad @@tab  nesting with style @@-command


@multitable {truc} {bidule}
@item truc
@code{@tab bidule}
@end multitable

@bye
